Fixed squished button bug on landing page for mobile
Changelog:

•Made the buttons stay the same width for mobile
(src/components/LandingInfo.scss)

•Corrected the format of the page so that when you shrink the size of the screen the paragraphs and their headers are in order (src/components/LandingInfo.tsx)

--- a/src/components/LandingInfo.scss
+++ b/src/components/LandingInfo.scss
@@ -1,6 +1,4 @@
 .learnMore {
-    display: block;
-    width: 20%;
     --background: transparent;
     --color: #d50000;
     --border-style: solid;
@@ -10,5 +8,6 @@
 }
 
 .landingParagraphs {
+    display: block;
     text-align: left;
 }
